# instructor_app

./: .env.example  .gitignore  AWS_DEPLOYMENT.md  CHANGELOG_FRONTEND.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.simple  FILE_UPLOAD_GUIDE.md  FRONTEND_GUIDE.md  MIGRATION_COMPARISON.md  README.md  SUMMARY.md  USAGE.md  config.json  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
frontend/: .dockerignore  Dockerfile  README.md  i18n.ts  middleware.ts  next.config.ts  package-lock.json
frontend/app/: layout.tsx
frontend/app/[locale]/: layout.tsx  page.tsx
frontend/components/: DocumentViewer.tsx  FileUpload.tsx  FloatingOptions.tsx  InstructorApp.tsx  LanguageSwitcher.tsx  ModelConfigStep.tsx  ModelConfigStep.tsx.old  PromptStep.tsx  ResultsStep.tsx  SchemaStep.tsx  SettingsDialog.tsx  StepIndicator.tsx
frontend/lib/: api.ts
frontend/messages/: en.json  ko.json  zh.json
frontend/types/: schema.ts
src/instructor_app/: __init__.py
src/instructor_app/api/: main.py
src/instructor_app/mcp/: server.py
src/instructor_app/schemas/: __init__.py  dynamic.py
src/instructor_app/templates/: index.html
src/instructor_app/utils/: document_cache.py  export.py  file_parser.py  file_storage.py  instructor_client.py  structured_parser.py
tests/: test_api.py  test_dynamic_schema.py  test_export.py  test_file_parser.py  test_file_upload_api.py  test_list_extraction.py  test_nested_schema.py  test_structured_parser.py
