[project]
name = "instructor-app"
version = "0.1.0"
description = "Web application for Instructor - structured outputs from LLMs with dynamic schemas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
file-upload = [
    "paddleocr>=2.7.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
